# ArmoniK.Api

./: .dockerignore  .editorconfig  .eslintrc  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .yarnrc.yml  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  docfx.json  eslint.config.mjs  generate-doc.sh  index.html  index.ts  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  proto2python.sh  pyproject.toml  renovate.json  toc.html  xrefmap.yml
.docs/: .eslintrc  .gitignore  README.md  app.config.ts  conf.py  eslint.config.mjs  index.rst  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
.github/: auto_assign.yml
Documentation/: docfx.json  toc.yml
api/: ArmoniK.Api.Client.Options.GrpcClient.html  ArmoniK.Api.Client.Options.html  ArmoniK.Api.Client.Submitter.GrpcChannelFactory.html  ArmoniK.Api.Client.Submitter.SubmitterClientExt.html  ArmoniK.Api.Client.Submitter.html  ArmoniK.Api.Common.Channel.Utils.html  (+26 more)
api-csharp/: ArmoniK.Api.Client.Options.html  ArmoniK.Api.Client.Submitter.GrpcChannelFactory.html  ArmoniK.Api.Client.Submitter.SubmitterClientExt.html  ArmoniK.Api.Client.Submitter.html  ArmoniK.Api.Common.Channel.Utils.html  ArmoniK.Api.Common.Options.GrpcChannel.html  ArmoniK.Api.Common.Options.GrpcSocketType.html  ArmoniK.Api.Worker.Tests.html  ArmoniK.Api.Worker.Utils.WorkerServer.html  ArmoniK.Api.Worker.Utils.html  ArmoniK.Api.Worker.Worker.TaskRequestExtensions.html  ArmoniK.Api.Worker.Worker.WorkerStreamWrapper.html  ArmoniK.Api.Worker.Worker.html  index.html  toc.html
api-protocol/: index.html
(+203 files in other folders)
