[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "armonik"
description = ""
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["cloud", "HTC"]
license = {text = ""}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "grpcio",
    "grpcio-tools",
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "pkg/_version.py"

[tool.setuptools.packages.find]
where= ["Api/python/src"]
