[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armonik"
description = "GRPC python binding for the ArmoniK orchestrator API"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["cloud", "HTC", "gRPC", "ArmoniK", "Aneo"]
license = {text = "Apache v2.0 LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "grpcio",
    "grpcio-tools",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/aneoconsulting/ArmoniK.Api"
"Bug Tracker" = "https://github.com/aneoconsulting/ArmoniK/issues"

[tool.setuptools_scm]
write_to = "pkg/_version.py"

[tool.setuptools.packages.find]
where= ["Api/python/src"]
